src/test/ui/conditional-compilation/cfg-attr-crate-2.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: no_core is experimental
=======
error[E0658]: the `#[no_core]` attribute is an experimental feature
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/cfg-attr-crate-2.rs:6:21
   |
LL | #![cfg_attr(broken, no_core)]
   |                     ^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29639
   = help: add `#![feature(no_core)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
